modules/sg/main.tf
resource "aws_security_group" "elhadji-sg" {
  name = "${var.admin}-sg-terraform"
  description = "Allow inbound traffic"

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.admin}-sg-terraform"
    formateur = "${var.formateur}"
  }
}

output "sg-name" {
    value = aws_security_group.elhadji-sg.name
}
